--- a/frontend/online-learning-frontend/src/styles/Login.css
+++ b/frontend/online-learning-frontend/src/styles/Login.css
@@ -58,3 +58,10 @@
   margin-top: 20px;
   font-size: 1rem;
 }
+
+.custom-toast {
+  font-size: 16px;
+  background-color: green !important;
+  color: white !important;
+  border-radius: 8px;
+}
