--- a/frontend/online-learning-frontend/src/styles/Dashboard.css
+++ b/frontend/online-learning-frontend/src/styles/Dashboard.css
@@ -42,7 +42,8 @@
 }
 
 .btn {
-  background-color: #007bff;
+  /* background-color: #007bff; */
+  background-color: #a56dd6;
   color: white;
   border: none;
   padding: 10px 20px;
