--- a/frontend/online-learning-frontend/src/styles/HomePage.css
+++ b/frontend/online-learning-frontend/src/styles/HomePage.css
@@ -13,11 +13,13 @@
   margin: 10px;
   padding: 10px 20px;
   color: white;
-  background-color: #007bff;
+  /* background-color: #007bff; */
+  background-color: #a87bb4;
   text-decoration: none;
   border-radius: 5px;
 }
 
 .home-page .btn-secondary {
-  background-color: #28a745;
+  /* background-color: #28a745; */
+  background-color: #20b083;
 }
